# gnuradio-nn

./: Dockerfile  README  README.md  mlp.json  nn_learn_example.grc  nn_mod.grc  nn_mod.py  nn_mod_am.py  nn_mod_bpsk.py  nn_mod_cpfsk.py  nn_online.grc  nn_online.py
gr-neural_networks/: CMakeLists.txt  MANIFEST.md
gr-neural_networks/cmake/Modules/: neural_networksConfig.cmake
gr-neural_networks/docs/: README.neural_networks
gr-neural_networks/docs/doxygen/: Doxyfile.in
gr-neural_networks/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-neural_networks/grc/: CMakeLists.txt  neural_networks_nn_mod_py_cf.xml  neural_networks_nn_py_ff.xml
gr-neural_networks/include/neural_networks/: CMakeLists.txt  api.h
gr-neural_networks/lib/: CMakeLists.txt  qa_neural_networks.cc  qa_neural_networks.h  test_neural_networks.cc
gr-neural_networks/python/: CMakeLists.txt  __init__.py  lstm.json  model.h5  my_model.h5  nn_mod_py_cf.py  nn_py_ff.py  qa_nn_mod_py_cf.py  qa_nn_py_ff.py  sine_mlp.h5  sine_mlp_weights.h5
gr-neural_networks/python/.unittests/python/: qa_mlp_py_ff.xml  qa_nn_py_ff.xml
gr-neural_networks/swig/: CMakeLists.txt  neural_networks_swig.i
models/: conv.json
python/: conv.py  mlp.py
